log/build_2026-05-16_17-41-41/obstacle_avoidance/stderr.log
  File "/home/krish/ros2_ws/install/obstacle_avoidance/lib/python3.10/site-packages/obstacle_avoidance/avoider.py", line 37
    return
    ^^^^^^
SyntaxError: 'return' outside function

